--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,10 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  height: 100px;
+  background-color: #fe7f2a;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
