--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,16 @@
 .App-header {
   background-color: #fe7f2a;
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  flex-direction: row;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  z-index:1
+  z-index:1;
+  position: absolute;
+  margin-top: auto;
+  margin-bottom: auto;
+  top: 0;
+  left: 0;
 }
 
 .App-header-text {
@@ -31,7 +35,6 @@
 }
 
 .App-products {
-  margin: 3rem auto 3.5rem;
   max-width: 800px;
   text-align: center;
   z-index:1
@@ -39,7 +42,6 @@
 
 @media (min-width: 800px) {
   .App-products {
-    display: flex;
     justify-content: center;
   }
 }
