--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App-logo {
   animation: App-logo-spin infinite 50s linear;
   display: block;
-  margin-left: 0;
-  margin-right: auto;
-  width: 50%;
+  left: -50vmin;
+  top: -50vmin;
+  width: 75%;
   position: absolute;
   z-index:-1;
 }
