fix button styling, add remove item functionality

--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -37,8 +37,7 @@
     -webkit-appearance: none;
   }
   
-  .Product-buy-button:hover,
-  .Product-buy-button:focus {
+  .Product-buy-button:hover {
     background-color: #eb0708;
     color: white;
   }
