--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,23 @@
   box-sizing: border-box;
 }
 
+:root {
+  --backgroundColor: rgb(255 243 220);
+  --colorShadeA: rgb(255 91 40);
+  --colorShadeB: rgb(255 127 36);
+  --colorShadeC: rgb(254 169 42);
+  --colorShadeD: rgb(255 227 42);
+  --colorShadeE: rgb(255 255 42 / 1);
+  --colorShadeF: rgb(255 255 42);
+  --backgroundColor2: rgb(255 255 255);
+  --colorShadeA2: #227906;
+  --colorShadeB2: #23a026;
+  --colorShadeC2: #62b154;
+  --colorShadeD2: #99e88a;
+  --colorShadeE2: #d2fbd5;
+}
+/* button styling */
+
 button.Product-Remove-Button {
   position: relative;
   display: inline-block;
@@ -79,15 +96,33 @@ button.Product-Remove-Button {
   font-family: inherit;
 }
 
-button.big-button {
+/* product buy button styling */
+
+button.Product-Buy-Button {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  font-size: 0.65rem;
+    color:var(--colorShadeA2);
+  font-weight: 700;
+  text-transform: uppercase;
+  font-family: inherit;
+}
+
+
+button.big-button.Product-Buy-Button {
    padding: 1em 2em;
-   border: 2px solid var(--colorShadeA);
+   border: 2px solid var(--colorShadeA2);
   border-radius: 1em;
-  background: var(--colorShadeE);
+  background: var(--colorShadeE2);
 transform-style: preserve-3d;
    transition: all 175ms cubic-bezier(0, 0, 1, 1);
 }
-button.big-button::before {
+button.big-button.Product-Buy-Button::before {
   position: absolute;
   content: '';
   width: 100%;
@@ -96,31 +131,73 @@ button.big-button::before {
   left: 0;
   right: 0;
   bottom: 0;
-  background: var(--colorShadeC);
+  background: var(--colorShadeC2);
   border-radius: inherit;
-    box-shadow: 0 0 0 2px var(--colorShadeB), 0 0.75em 0 0 var(--colorShadeA);
+    box-shadow: 0 0 0 2px var(--colorShadeB2), 0 0.75em 0 0 var(--colorShadeA2);
  transform: translate3d(0, 0.75em, -1em);
      transition: all 175ms cubic-bezier(0, 0, 1, 1);
 }
 
-/* button styling */
-
-button.big-button:hover {
-  background: var(--colorShadeD);
+button.big-button.Product-Buy-Button:hover {
+  background: var(--colorShadeD2);
   transform: translate(0, 0.375em);
 }
 
-button.big-button:hover::before {
+button.big-button.Product-Buy-Button:hover::before {
   transform: translate3d(0, 0.75em, -1em);
 }
 
-button.big-button:active {
+button.big-button.Product-Buy-Button:active {
             transform: translate(0em, 0.75em);
 }
 
-button.big-button:active::before {
+button.big-button.Product-Buy-Button:active::before {
   transform: translate3d(0, 0, -1em);
   
-      box-shadow: 0 0 0 2px var(--colorShadeB), 0 0.25em 0 0 var(--colorShadeB);
+      box-shadow: 0 0 0 2px var(--colorShadeB2), 0 0.25em 0 0 var(--colorShadeB2);
+}
 
+/* product remove button styling */
+
+button.big-button.Product-Remove-Button {
+  padding: 1em 2em;
+  border: 2px solid var(--colorShadeA);
+ border-radius: 1em;
+ background: var(--colorShadeE);
+transform-style: preserve-3d;
+  transition: all 175ms cubic-bezier(0, 0, 1, 1);
+}
+button.big-button.Product-Remove-Button::before {
+ position: absolute;
+ content: '';
+ width: 100%;
+ height: 100%;
+ top: 0;
+ left: 0;
+ right: 0;
+ bottom: 0;
+ background: var(--colorShadeC);
+ border-radius: inherit;
+   box-shadow: 0 0 0 2px var(--colorShadeB), 0 0.75em 0 0 var(--colorShadeA);
+transform: translate3d(0, 0.75em, -1em);
+    transition: all 175ms cubic-bezier(0, 0, 1, 1);
+}
+
+button.big-button.Product-Remove-Button:hover {
+ background: var(--colorShadeD);
+ transform: translate(0, 0.375em);
+}
+
+button.big-button.Product-Remove-Button:hover::before {
+ transform: translate3d(0, 0.75em, -1em);
+}
+
+button.big-button.Product-Remove-Button:active {
+           transform: translate(0em, 0.75em);
+}
+
+button.big-button.Product-Remove-Button:active::before {
+ transform: translate3d(0, 0, -1em);
+ 
+     box-shadow: 0 0 0 2px var(--colorShadeB), 0 0.25em 0 0 var(--colorShadeB);
 }
